Edit:尝试横向全屏

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       body {
         overscroll-behavior: none;
         touch-action: none;
-        background-color: #f8fafc;
+        background-color: #5B9BD5;
         font-family: 'Nunito', sans-serif;
       }
       
