--- a/index.html
+++ b/index.html
@@ -25,10 +25,38 @@
     <title>Bottled Ocean</title>
     <link rel="manifest" href="/manifest.json">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;900&family=Patrick+Hand&display=swap" rel="stylesheet">
     <style>
+      /* Local Font Faces */
+      @font-face {
+        font-family: 'Nunito';
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url(/fonts/Nunito-Regular.woff2) format('woff2');
+      }
+      @font-face {
+        font-family: 'Nunito';
+        font-style: normal;
+        font-weight: 700;
+        font-display: swap;
+        src: url(/fonts/Nunito-Bold.woff2) format('woff2');
+      }
+      @font-face {
+        font-family: 'Nunito';
+        font-style: normal;
+        font-weight: 900;
+        font-display: swap;
+        src: url(/fonts/Nunito-Black.woff2) format('woff2');
+      }
+      @font-face {
+        font-family: 'Patrick Hand';
+        font-style: normal;
+        font-weight: 400;
+        font-display: swap;
+        src: url(/fonts/PatrickHand-Regular.woff2) format('woff2');
+      }
+      
+      /* Global Styles */
       body {
         overscroll-behavior: none;
         touch-action: none;
